---
source: crates/utils/src/wit.rs
expression: wit
---
package root:component;

world root {
    import obelisk:types/time@6.0.0;
    import obelisk:types/execution@6.0.0;
    import obelisk:types/join-set@6.0.0;
    import obelisk:workflow/workflow-support@7.0.0;
    import testing:fibo/fibo;
    import testing:fibo-obelisk-ext/fibo;

    export testing:fibo-workflow/workflow;
    export testing:fibo-workflow-obelisk-ext/workflow;
    export testing:fibo-workflow-obelisk-schedule/workflow;
}
package obelisk:types@6.0.0 {
    @since(version = 3.0.0)
    interface time {
        @since(version = 3.0.0)
        variant duration {
            milliseconds(u64),
            seconds(u64),
            minutes(u32),
            hours(u32),
            days(u32),
        }

        /// A time and date in seconds plus nanoseconds.
        /// Extracted from wasi:clocks@0.2.0 to avoid dependency on wasi:io
        @since(version = 3.0.0)
        record datetime {
            seconds: u64,
            nanoseconds: u32,
        }

        @since(version = 3.0.0)
        variant schedule-at {
            now,
            at(datetime),
            in(duration),
        }
    }
    @since(version = 4.0.0)
    interface execution {
        @since(version = 3.0.0)
        record execution-id {
            id: string,
        }

        @since(version = 3.0.0)
        record delay-id {
            id: string,
        }

        @since(version = 3.0.0)
        record function {
            /// `namespace:pkg_name/ifc_name` or `namespace:pkg_name/ifc_name@version`
            interface-name: string,
            /// must not contain dot (`.`)
            function-name: string,
        }

        @since(version = 3.0.0)
        variant response-id {
            execution-id(execution-id),
            delay-id(delay-id),
        }

        @since(version = 3.0.0)
        record function-mismatch {
            /// Workflow requested function
            specified-function: function,
            /// What was found actually during execution. None if delay was found as next unprocessed response.
            actual-function: option<function>,
            actual-id: response-id,
        }

        /// The kind of a platform-level execution failure, as opposed to a business
        /// `err` result. Surfaced additively via `get-execution-failure-kind`; the
        /// err value itself keeps carrying the `execution-failed` sentinel.
        @since(version = 5.0.0)
        enum execution-failure-kind {
            timed-out,
            nondeterminism-detected,
            out-of-fuel,
            cancelled,
            value-too-large,
            uncategorized,
        }

        /// Error that is thrown by `-await-next` extension functions.
        @since(version = 3.0.0)
        variant await-next-extension-error {
            /// All submitted requests and their responses of specified function and join set were already processed.
            all-processed,
            /// Execution response was awaited and marked as processed, but it belongs to a different function.
            /// This can happen when join set contains responses of multiple functions or delay requests.
            /// Use `join-set.last-id` for the id of the processed response.
            function-mismatch(function-mismatch),
        }

        /// Error variants that may occur when calling `-get` extension functions.
        @since(version = 3.0.0)
        variant get-extension-error {
            /// Execution is found in processed responses, but it belongs to a different function.
            /// This can happen when join set contains responses of multiple functions.
            function-mismatch(function-mismatch),
            /// Processed responses do not contain the specified execution ID.
            /// Execution was not awaited using `-await-next` extension or `join-set.join-next`.
            not-found-in-processed-responses,
        }

        /// Error variants that may occur when calling `-stub` extension functions.
        @since(version = 3.0.0)
        variant stub-error {
            /// execution was not found.
            execution-not-found,
            /// supplied return value does not type check.
            type-check-error(string),
            /// Conflict can happen when a second writer attempts to stub a value, while the
            /// value is not equal to the already stubbed value.
            conflict,
            value-too-large(u64),
        }

        @since(version = 4.2.0)
        variant schedule-json-error {
            /// See `Function` definition
            ffqn-parsing-error(string),
            function-not-found,
            type-check-error(string),
            value-too-large(u64),
        }

        variant child-execution-request-error {
            function-not-found,
            type-check-error(string),
            value-too-large(u64),
        }
    }
    @since(version = 4.2.0)
    interface backtrace {
        @since(version = 4.2.0)
        record frame-symbol {
            func-name: option<string>,
            file: option<string>,
            line: option<u32>,
            col: option<u32>,
        }

        @since(version = 4.2.0)
        record frame-info {
            module: string,
            func-name: string,
            symbols: list<frame-symbol>,
        }

        @since(version = 4.2.0)
        record wasm-backtrace {
            frames: list<frame-info>,
        }
    }
    @since(version = 4.0.0)
    interface join-set {
        use execution.{response-id};

        /// Join set resouce.
        @since(version = 4.0.0)
        resource join-set {
            /// Get the join set identifier in the form of:
            /// * `o:NAME` in case of a one-off join set, where `NAME` is generally an auto-incremented index optionally followed by underscode and a supplied name,
            /// * `g:NAME` in case of a generated join set where `NAME` is generally an auto-incremented index,
            /// * `n:NAME` in case of a named join set
            @since(version = 4.0.0)
            id: func() -> string;
            /// The `response-id` of the last processed response of this join set
            /// (the one returned by the most recent `join-next` / `-await-next`),
            /// or `none` if no response has been processed yet.
            /// Must be read immediately after `join-next`, before the next one.
            /// An `execution-id` marks a child response; a `delay-id` marks a delay.
            @since(version = 5.0.0)
            last-id: func() -> option<response-id>;
        }
    }
}


package obelisk:workflow@7.0.0 {
    interface workflow-support {
        use obelisk:types/join-set@6.0.0.{join-set};
        use obelisk:types/execution@6.0.0.{function, execution-id};
        use obelisk:types/time@6.0.0.{schedule-at};
        use obelisk:types/execution@6.0.0.{schedule-json-error};

        variant submit-json-error {
            ffqn-parsing-error(string),
            function-not-found,
            type-check-error(string),
            value-too-large(u64),
        }

        variant get-result-json-error {
            execution-id-parsing-error(string),
            not-found-in-processed-responses,
        }

        variant join-next-error {
            all-processed,
        }

        join-set-create: func() -> join-set;

        submit-json: func(join-set: borrow<join-set>, function: function, params: string) -> result<execution-id, submit-json-error>;

        get-result-json: func(execution-id: execution-id) -> result<result<option<string>, option<string>>, get-result-json-error>;

        join-next: func(join-set: borrow<join-set>) -> result<result<option<string>, option<string>>, join-next-error>;

        execution-id-generate: func() -> execution-id;

        schedule-json: func(execution-id: execution-id, schedule-at: schedule-at, function: function, params: string) -> result<_, schedule-json-error>;
    }
}


package testing:fibo {
    interface fibo {
        fibo: func(n: u8) -> result<u64>;
    }
}


package testing:fibo-obelisk-ext {
    interface fibo {
        use obelisk:types/join-set@6.0.0.{join-set};
        use obelisk:types/execution@6.0.0.{await-next-extension-error, execution-id, child-execution-request-error};

        fibo-submit: func(join-set: borrow<join-set>, n: u8) -> result<execution-id, child-execution-request-error>;

        fibo-await-next: func(join-set: borrow<join-set>) -> result<result<u64>, await-next-extension-error>;
    }
}


package testing:fibo-workflow {
    interface workflow {
        use obelisk:types/execution@6.0.0.{execution-id};

        fibow: func(n: u8, iterations: u32) -> result<u64>;

        fiboa: func(n: u8, iterations: u32) -> result<u64>;

        fiboa-concurrent: func(n: u8, iterations: u32) -> result<u64>;

        fiboa-submit-json: func(n: u8) -> result<u64>;

        test-submit-json-unknown-ffqn: func() -> result<_, string>;

        test-submit-json-malformed-params: func() -> result<_, string>;

        test-get-result-json-before-await: func() -> result<_, string>;

        test-get-result-json-err-variant: func() -> result<_, string>;

        test-schedule-json: func() -> result<execution-id, string>;
    }
}


package testing:fibo-workflow-obelisk-ext {
    interface workflow {
        use obelisk:types/execution@6.0.0.{execution-id};
        use obelisk:types/join-set@6.0.0.{join-set};
        use obelisk:types/execution@6.0.0.{await-next-extension-error, get-extension-error, child-execution-request-error};

        fibow-submit: func(join-set: borrow<join-set>, n: u8, iterations: u32) -> result<execution-id, child-execution-request-error>;

        fibow-await-next: func(join-set: borrow<join-set>) -> result<result<u64>, await-next-extension-error>;

        fibow-get: func(execution-id: execution-id) -> result<result<u64>, get-extension-error>;

        fiboa-submit: func(join-set: borrow<join-set>, n: u8, iterations: u32) -> result<execution-id, child-execution-request-error>;

        fiboa-await-next: func(join-set: borrow<join-set>) -> result<result<u64>, await-next-extension-error>;

        fiboa-get: func(execution-id: execution-id) -> result<result<u64>, get-extension-error>;

        fiboa-concurrent-submit: func(join-set: borrow<join-set>, n: u8, iterations: u32) -> result<execution-id, child-execution-request-error>;

        fiboa-concurrent-await-next: func(join-set: borrow<join-set>) -> result<result<u64>, await-next-extension-error>;

        fiboa-concurrent-get: func(execution-id: execution-id) -> result<result<u64>, get-extension-error>;

        fiboa-submit-json-submit: func(join-set: borrow<join-set>, n: u8) -> result<execution-id, child-execution-request-error>;

        fiboa-submit-json-await-next: func(join-set: borrow<join-set>) -> result<result<u64>, await-next-extension-error>;

        fiboa-submit-json-get: func(execution-id: execution-id) -> result<result<u64>, get-extension-error>;

        test-submit-json-unknown-ffqn-submit: func(join-set: borrow<join-set>) -> result<execution-id, child-execution-request-error>;

        test-submit-json-unknown-ffqn-await-next: func(join-set: borrow<join-set>) -> result<result<_, string>, await-next-extension-error>;

        test-submit-json-unknown-ffqn-get: func(execution-id: execution-id) -> result<result<_, string>, get-extension-error>;

        test-submit-json-malformed-params-submit: func(join-set: borrow<join-set>) -> result<execution-id, child-execution-request-error>;

        test-submit-json-malformed-params-await-next: func(join-set: borrow<join-set>) -> result<result<_, string>, await-next-extension-error>;

        test-submit-json-malformed-params-get: func(execution-id: execution-id) -> result<result<_, string>, get-extension-error>;

        test-get-result-json-before-await-submit: func(join-set: borrow<join-set>) -> result<execution-id, child-execution-request-error>;

        test-get-result-json-before-await-await-next: func(join-set: borrow<join-set>) -> result<result<_, string>, await-next-extension-error>;

        test-get-result-json-before-await-get: func(execution-id: execution-id) -> result<result<_, string>, get-extension-error>;

        test-get-result-json-err-variant-submit: func(join-set: borrow<join-set>) -> result<execution-id, child-execution-request-error>;

        test-get-result-json-err-variant-await-next: func(join-set: borrow<join-set>) -> result<result<_, string>, await-next-extension-error>;

        test-get-result-json-err-variant-get: func(execution-id: execution-id) -> result<result<_, string>, get-extension-error>;

        test-schedule-json-submit: func(join-set: borrow<join-set>) -> result<execution-id, child-execution-request-error>;

        test-schedule-json-await-next: func(join-set: borrow<join-set>) -> result<result<execution-id, string>, await-next-extension-error>;

        test-schedule-json-get: func(execution-id: execution-id) -> result<result<execution-id, string>, get-extension-error>;
    }
}


package testing:fibo-workflow-obelisk-schedule {
    interface workflow {
        use obelisk:types/execution@6.0.0.{execution-id};
        use obelisk:types/time@6.0.0.{schedule-at};
        use obelisk:types/execution@6.0.0.{schedule-json-error};

        fibow-schedule: func(schedule-at: schedule-at, n: u8, iterations: u32) -> result<execution-id, schedule-json-error>;

        fiboa-schedule: func(schedule-at: schedule-at, n: u8, iterations: u32) -> result<execution-id, schedule-json-error>;

        fiboa-concurrent-schedule: func(schedule-at: schedule-at, n: u8, iterations: u32) -> result<execution-id, schedule-json-error>;

        fiboa-submit-json-schedule: func(schedule-at: schedule-at, n: u8) -> result<execution-id, schedule-json-error>;

        test-submit-json-unknown-ffqn-schedule: func(schedule-at: schedule-at) -> result<execution-id, schedule-json-error>;

        test-submit-json-malformed-params-schedule: func(schedule-at: schedule-at) -> result<execution-id, schedule-json-error>;

        test-get-result-json-before-await-schedule: func(schedule-at: schedule-at) -> result<execution-id, schedule-json-error>;

        test-get-result-json-err-variant-schedule: func(schedule-at: schedule-at) -> result<execution-id, schedule-json-error>;

        test-schedule-json-schedule: func(schedule-at: schedule-at) -> result<execution-id, schedule-json-error>;
    }
}
